Fix nav menu on mobile

--- a/pins/static/css/main-v1.3.css
+++ b/pins/static/css/main-v1.3.css
@@ -842,8 +842,17 @@ li.has-submenu a.allow-toggle {
 }
 
 /* Mobile menu styling */
-@media (max-width: 1150px) {
-  .nav-pills>.presentation {
+@media (max-width: 767px) {
+  .navigation__items > li {
+    padding: 0;
+  }
+  
+  .nav-pills {
+    float: none;
+    width: 100%;
+    display: block;
+  }
+  .nav-pills > li.presentation {
     float: none;
     width: 100%;
   }
